force-app/main/default/objects/Insurance_Verification__c/Insurance_Verification__c.object-meta.xml
<CustomObject>
    <description>For use with the Reimbursement Hotline Project.</description>
    <label>Insurance Verification/Access to Care</label>
    <nameField>
        <displayFormat>IV/ATC-{000000}</displayFormat>
        <label>IV/ATC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Verification/Access to Care</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>