force-app/main/default/objects/Insurance_Verification__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Insurance_Verification_Access_to_Care</relationshipName>
    <type>Lookup</type>
</CustomField>