force-app/main/default/objects/Insurance_Verification__c/fields/Appeal_Type2__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Type2__c</fullName>
    <label>Appeal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Prior Auth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>