force-app/main/default/objects/Insurance_Verification__c/fields/Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>Approval_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Number</label>
    <length>90</length>
    <type>Text</type>
</CustomField>