force-app/main/default/objects/Insurance_Verification__c/fields/ATC_Case_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>ATC_Case_Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ATC Case Close Date</label>
    <type>Date</type>
</CustomField>