force-app/main/default/objects/Insurance_Verification__c/fields/ATC_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>ATC_Close_Reason__c</fullName>
    <inlineHelpText>A-Approved
C-changed insurance /surgeons
D-lost to competitive other device
G-does not meet program guidelines
I-did not meet indications /clinical criteria
O-office-canceled
P-patient-canceled
T-lost to alternative treatment
NR-Non-responsive</inlineHelpText>
    <label>ATC Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>NR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>