force-app/main/default/objects/Insurance_Verification__c/fields/Claim_Denial_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Denial_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Denial Date</label>
    <type>Date</type>
</CustomField>