force-app/main/default/objects/Insurance_Verification__c/fields/Claim_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Claim_Denial_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Denial Reason</label>
    <type>TextArea</type>
</CustomField>