force-app/main/default/objects/Insurance_Verification__c/fields/Completed_Conservative_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Completed_Conservative_Treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Conservative Treatment</label>
    <type>Checkbox</type>
</CustomField>