force-app/main/default/objects/Insurance_Verification__c/fields/CPTCodeSecondary__c.field-meta.xml
<CustomField>
    <fullName>CPTCodeSecondary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CPT Code Secondary</label>
    <length>5</length>
    <type>Text</type>
</CustomField>