force-app/main/default/objects/Insurance_Verification__c/fields/Date_Case_Sent_for_External_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Sent_for_External_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Case Sent for External Review</label>
    <type>Date</type>
</CustomField>