force-app/main/default/objects/Insurance_Verification__c/fields/Date_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Date_Initiated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Initiated</label>
    <type>Date</type>
</CustomField>