force-app/main/default/objects/Insurance_Verification__c/fields/Denial_review_Approved__c.field-meta.xml
<CustomField>
    <fullName>Denial_review_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denial review:Approved</label>
    <type>Checkbox</type>
</CustomField>