force-app/main/default/objects/Insurance_Verification__c/fields/Denial_Review_Denied_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Review_Denied_Reason__c</fullName>
    <inlineHelpText>Select Reason</inlineHelpText>
    <label>Denial Review Denied-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-preferred brand</fullName>
            </value>
            <value>
                <fullName>Non-formulary</fullName>
            </value>
            <value>
                <fullName>Non-coverage</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>