force-app/main/default/objects/Insurance_Verification__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Physician, Resident(Processing), Fellow, Physician(Processing), Fellow(Processing)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Insurance_VerificationsDoctor</relationshipName>
    <type>Lookup</type>
</CustomField>