force-app/main/default/objects/Insurance_Verification__c/fields/Documentation_Received__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Received__c</fullName>
    <label>Documentation Received</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ATC Forms</fullName>
            </value>
            <value>
                <fullName>Letter of Denial</fullName>
            </value>
            <value>
                <fullName>Medical Documentation</fullName>
            </value>
            <value>
                <fullName>PT Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>