force-app/main/default/objects/Insurance_Verification__c/fields/External_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>External_Review_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>