force-app/main/default/objects/Insurance_Verification__c/fields/External_Review_Release_Hold__c.field-meta.xml
<CustomField>
    <fullName>External_Review_Release_Hold__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Review Release Hold</label>
    <type>Date</type>
</CustomField>