force-app/main/default/objects/Insurance_Verification__c/fields/Failed_Conservative_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Failed_Conservative_Treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Conservative Treatment</label>
    <type>Checkbox</type>
</CustomField>