force-app/main/default/objects/Insurance_Verification__c/fields/First_Level_Appeal_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Appeal_Contact_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Level Appeal Contact Fax</label>
    <type>Phone</type>
</CustomField>