force-app/main/default/objects/Insurance_Verification__c/fields/First_Level_Appeal_Contact_First__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Appeal_Contact_First__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Level Appeal Contact First</label>
    <length>200</length>
    <type>Text</type>
</CustomField>