force-app/main/default/objects/Insurance_Verification__c/fields/First_Level_Appeal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Appeal_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Level Appeal Deadline</label>
    <type>Date</type>
</CustomField>