force-app/main/default/objects/Insurance_Verification__c/fields/First_Level_Appeal_Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Appeal_Letter_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Level Appeal Letter Sent Date</label>
    <type>Date</type>
</CustomField>