force-app/main/default/objects/Insurance_Verification__c/fields/Intiate_Prior_Authorization_Zimmer__c.field-meta.xml
<CustomField>
    <fullName>Intiate_Prior_Authorization_Zimmer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intiate Prior Authorization-Zimmer</label>
    <type>Checkbox</type>
</CustomField>