force-app/main/default/objects/Insurance_Verification__c/fields/Joint_Involved__c.field-meta.xml
<CustomField>
    <fullName>Joint_Involved__c</fullName>
    <label>Joint Involved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Cervical Spine</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Metatarsal</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>