force-app/main/default/objects/Insurance_Verification__c/fields/Last_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Follow-Up</label>
    <type>Date</type>
</CustomField>