force-app/main/default/objects/Insurance_Verification__c/fields/Last_Follow_Up_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_in_Hours__c</fullName>
    <label>Follow Up Reminder (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>