force-app/main/default/objects/Insurance_Verification__c/fields/Lesion_Size__c.field-meta.xml
<CustomField>
    <fullName>Lesion_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lesion Size</label>
    <type>TextArea</type>
</CustomField>