force-app/main/default/objects/Insurance_Verification__c/fields/MD_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>MD_Office_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MD Office Address</label>
    <type>TextArea</type>
</CustomField>