force-app/main/default/objects/Insurance_Verification__c/fields/MD_Office_Address_Auto__c.field-meta.xml
<CustomField>
    <fullName>MD_Office_Address_Auto__c</fullName>
    <formula>Surgeons_Name__r.PersonMailingStreet + BR() + 
Surgeons_Name__r.PersonMailingCity + &quot;, &quot;+ 
Surgeons_Name__r.PersonMailingState +&quot; &quot; + 
Surgeons_Name__r.PersonMailingPostalCode + BR() + 
Surgeons_Name__r.PersonMailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MD Office Address</label>
    <type>Text</type>
</CustomField>