force-app/main/default/objects/Insurance_Verification__c/fields/MD_Office_Contact_Fax_auto__c.field-meta.xml
<CustomField>
    <fullName>MD_Office_Contact_Fax_auto__c</fullName>
    <formula>Surgeons_Name__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MD Office Contact Fax</label>
    <type>Text</type>
</CustomField>