force-app/main/default/objects/Insurance_Verification__c/fields/MD_Office_Contact_Last__c.field-meta.xml
<CustomField>
    <fullName>MD_Office_Contact_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MD Office Contact Last</label>
    <length>200</length>
    <type>Text</type>
</CustomField>