force-app/main/default/objects/Insurance_Verification__c/fields/MD_Office_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>MD_Office_Contact_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MD Office Contact Phone Number</label>
    <type>Phone</type>
</CustomField>