force-app/main/default/objects/Insurance_Verification__c/fields/MD_Office_Contact_Phone_Number_auto__c.field-meta.xml
<CustomField>
    <fullName>MD_Office_Contact_Phone_Number_auto__c</fullName>
    <formula>Surgeons_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MD Office Contact Phone Number</label>
    <type>Text</type>
</CustomField>