force-app/main/default/objects/Insurance_Verification__c/fields/Name_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Practice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Practice</label>
    <length>200</length>
    <type>Text</type>
</CustomField>