force-app/main/default/objects/Insurance_Verification__c/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NPI Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>