force-app/main/default/objects/Insurance_Verification__c/fields/NPI_Number_Auto__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number_Auto__c</fullName>
    <formula>Surgeons_Name__r.NPI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPI Number</label>
    <type>Text</type>
</CustomField>