force-app/main/default/objects/Insurance_Verification__c/fields/Office_Notified__c.field-meta.xml
<CustomField>
    <fullName>Office_Notified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Notified</label>
    <type>Date</type>
</CustomField>