force-app/main/default/objects/Insurance_Verification__c/fields/On_Hold__c.field-meta.xml
<CustomField>
    <fullName>On_Hold__c</fullName>
    <label>1st Level Prior Auth On Hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MR – Medical Records</fullName>
            </value>
            <value>
                <fullName>F – ATC Forms</fullName>
            </value>
            <value>
                <fullName>P – Patient Nonresponse</fullName>
            </value>
            <value>
                <fullName>O – Office Nonresponse</fullName>
            </value>
            <value>
                <fullName>V – Vacation / Known Absence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>