force-app/main/default/objects/Insurance_Verification__c/fields/Onset_of_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Onset_of_Symptoms__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onset of Symptoms</label>
    <type>Date</type>
</CustomField>