force-app/main/default/objects/Insurance_Verification__c/fields/Other_Out_of_Pocket_Expense__c.field-meta.xml
<CustomField>
    <fullName>Other_Out_of_Pocket_Expense__c</fullName>
    <label>Other Out-of-Pocket Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>