force-app/main/default/objects/Insurance_Verification__c/fields/Outcome_Comments__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outcome Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>