force-app/main/default/objects/Insurance_Verification__c/fields/Patient_old__c.field-meta.xml
<CustomField>
    <fullName>Patient_old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient_old</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Insurance_Verification</relationshipName>
    <type>Lookup</type>
</CustomField>