force-app/main/default/objects/Insurance_Verification__c/fields/Peer_to_Peer_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Peer_to_Peer_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer to Peer Review Completed</label>
    <type>Checkbox</type>
</CustomField>