force-app/main/default/objects/Insurance_Verification__c/fields/Peer_to_Peer_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Peer_to_Peer_Review_Outcome__c</fullName>
    <label>Peer to Peer Review Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>