force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Coinsurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Primary_Coinsurance_Amount__c</fullName>
    <label>Primary Coinsurance Amount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>