force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Coverage_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Primary_Coverage_Termination_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Coverage Termination Date</label>
    <type>Date</type>
</CustomField>