force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Primary_Deductible_Amount__c</fullName>
    <label>Primary Deductible Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>