force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Primary_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Effective Date</label>
    <type>Date</type>
</CustomField>