force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Ins_Co_Subscriber_s_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Primary_Ins_Co_Subscriber_s_Relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Payer Subscriber&apos;s Relationship</label>
    <length>90</length>
    <type>Text</type>
</CustomField>