force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Insurance_Co_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Co_Office_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Payer Office Number</label>
    <type>Phone</type>
</CustomField>