force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Insurance_Co_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Co_Policy_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Payer Policy Number</label>
    <length>90</length>
    <type>Text</type>
</CustomField>