force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Insurance_Co_Subscriber_s_Last__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Co_Subscriber_s_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Insurance Co Subscriber&apos;s Last</label>
    <length>90</length>
    <type>Text</type>
</CustomField>