force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Out__c.field-meta.xml
<CustomField>
    <fullName>Primary_Out__c</fullName>
    <label>Primary Out-of-Network Coinsurance Amt</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>