force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Out_of_Network_Amount__c.field-meta.xml
<CustomField>
    <fullName>Primary_Out_of_Network_Amount__c</fullName>
    <label>Primary Out-of-Network Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>