force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Out_of_Network_Comments__c.field-meta.xml
<CustomField>
    <fullName>Primary_Out_of_Network_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Out-of-Network Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>