force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Out_of_Network_Deductible_Met__c.field-meta.xml
<CustomField>
    <fullName>Primary_Out_of_Network_Deductible_Met__c</fullName>
    <label>Primary Out-of-Network Deductible Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>